welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:14: error: expected start of definition
	override def forward(i:Int)  { 
                 ^Diagonal:17: error: expected start of definition
	override def forward()  {
                 ^Diagonal:20: error: expected start of definition
	override def backward(i:Int) {
                 ^Diagonal:23: error: expected start of definition
	override def backward() {
                 ^Diagonal:26: error: Unmatched closing brace '}' ignored here
}
^