welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.code
var diag = 0;
override def run() {
var x=0
ecritMessage(x);

setPos(1,diag)
	ecritMessage(x)
}

}
